src/test/deca/codegen/valid/multiplication_commut_f.deca
// Description:
//    test multiplication commut
//
// Resultats:
//  2
//
// Historique:
//    cree le 13/01/2017
{
float x = 1.0;
x = 2.0 * x;
print(x);
}
