src/test/deca/codegen/invalid/UnFoisNoInit_f.deca
// Description:
//    soustraction sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 13/01/2017
{
float x;
print(1.0 * x);
}
